Fix new connection button spacing on top

--- a/client/gutenberg/extensions/publicize/editor.scss
+++ b/client/gutenberg/extensions/publicize/editor.scss
@@ -52,7 +52,6 @@
 
 .jetpack-publicize-add-connection-container {
 	display: flex;
-	margin-top: -3px;
 
 	a {
 		cursor: pointer;
